--- a/simon.css
+++ b/simon.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
  /* LA PAGE DE DÉBUT */
@@ -75,7 +74,7 @@ div#simonGame {
     opacity: 1;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
+
 
     border-radius: 5%;
     width: 850px; /* Peut-être modifier, le contenue s'adapte */
@@ -90,9 +89,10 @@ div#simonGame {
     gap: 0 18px; /* ICI CHANGER LE GAP ENTRE LES LIGNES !! */
     justify-content: center;
 }
+
  /* CASES DE COULEURS : propriétés et valeurs générals */
 div#color1, div#color2, div#color3, div#color4 {
-
+    margin-top: 30px;
     grid-row: 2;
     border-radius: 25px;
     box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
@@ -129,6 +129,7 @@ h2#smallTitle, h2#startTittle {
     width: 100%;
     grid-column-start: 2;
     grid-column-end: 6;
+    padding: 0;
 
 
     font-family: 'Abril Fatface', cursive;
@@ -156,7 +157,7 @@ button.valider {
     border: 0;
     border-radius: 10px;
     background-color: white;
-    /*AJOUTER UN LINEAR*/
+    
     box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
                 inset -2px -2px 3px rgba(0, 0, 0, .6);
 
@@ -184,16 +185,20 @@ button.debut {
     border: 0;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
-    /*AJOUTER UN LINEAR*/
+    
     box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
                 inset -2px -2px 3px rgba(0, 0, 0, .6);
 
     width: 500px;
     height: 70px;
 }
+/* Effet sur le hover du bouton recommencer */
 button.debut:hover {
     color: #06d6a0;
 }
+
+
+/* Eclaircissement des touches quand le joueur click */
 .lightv {
 background-color: rgb(174, 159, 255)!important;
 
@@ -207,253 +212,31 @@ background-color: rgb(174, 159, 255)!important;
 .lightj{
     background-color: rgb(252, 255, 208)!important;
 }
-.commentaire {
-    color: whitesmoke;
-    z-index: 30;
-}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-div#start > div#decompte > span.number1, span.number2, span.number3 {
-    position: absolute;
-    opacity: 0;
-    display: block;
-    font-family: 'Abril Fatface', cursive;
-    top: 15px;
-    left: 350px;
-    color: black;
-    font-size: 400px;
+/* Les messages envoyés si nous réussissons ou si nous perdons */
+p.dommage{
+    display: none;
+    grid-row: 3;
+    grid-column: 3 / span 2;
+    margin-top: 15px;
     text-align: center;
+
+    font-size: 2.5em;
+    font-family: 'Abril Fatface', cursive;
+    color: #ffffff;
+    text-shadow: 0 0 0.2em rgb(255, 0, 0), 0 0 0.2em rgb(255, 34, 0)
+    
 }
 
-div#decompte > span {
-    animation-delay: 0s;
-    animation-duration: 0.7s;
-    animation-name : compte123;
-    animation-direction: alternate;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
+p.bravo {
+    display: none;
+    grid-row: 3;
+    grid-column: 3 / span 2;
+    margin-top: 15px;
+    text-align: center;
 
-}
-div#decompte > span:nth-child(2) {
-  animation-delay: 1s;
-
-}
-div#decompte > span:nth-child(3) {
-    animation-delay: 2s
-
-}
-
-@keyframes compte123 {
-    0% {
-        opacity: 0;
-        margin-top: 150px;
-        font-size: 100px;
-    }
-    50% {
-        opacity: 1;
-        display: block;
-        font-family: 'Abril Fatface', cursive;
-        margin-top: 105px;
-        color: black;
-        font-size: 400px;
-        text-align: center;
-    }
-    100% {
-        opacity: 0;
-        margin-top: 150px;
-        font-size: 100px;
-
-
-    }
+    font-size: 2.5em;
+    font-family: 'Abril Fatface', cursive;
+    color: #ffffff;
+    text-shadow: 0 0 0.2em #06d6a0, 0 0 0.2em #0bffbe
 }
